--- a/zhuye-fs/demo/src/main/resources/templates/user/aa.html
+++ b/zhuye-fs/demo/src/main/resources/templates/user/aa.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>demo</title>
+    <title>aa</title>
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
@@ -22,13 +22,13 @@
                     text-color="#DCECE6"
                     active-text-color="#3A4040">
 
-                <el-menu-item index="1">地图监控</el-menu-item>
-                <el-menu-item index="2">客户管理</el-menu-item>
-                <el-menu-item index="3">业务管理</el-menu-item>
+                <el-menu-item index="1">处理中心</el-menu-item>
+                <el-menu-item index="2">我的工作台</el-menu-item>
+                <el-menu-item index="3">订单管理</el-menu-item>
             </el-menu>
         </el-header>
-        <el-container >
-            <el-aside width="200px">
+        <el-container>
+            <el-aside width="180px">
                 <el-menu
                         default-active="1"
                         class="el-menu-vertical-demo"
@@ -61,7 +61,6 @@
                     </el-menu-item>
                 </el-menu>
             </el-aside>
-
             <el-main>
                 <div class="text">
                     <div>用户信息管理</div>
@@ -110,7 +109,7 @@
                                 <el-table-column
                                         prop="number"
                                         label="账号"
-                                        width="110">
+                                        width="120">
                                 </el-table-column>
                                 <el-table-column
                                         prop="username"
@@ -120,17 +119,17 @@
                                 <el-table-column
                                         prop="phone"
                                         label="手机号"
-                                        width="130">
+                                        width="150">
                                 </el-table-column>
                                 <el-table-column
                                         prop="establish"
                                         label="创建用户"
-                                        width="130">
+                                        width="150">
                                 </el-table-column>
                                 <el-table-column
                                         prop="mechanism"
                                         label="组织机构"
-                                        width="170">
+                                        width="180">
                                 </el-table-column>
                                 <el-table-column
                                         prop="role"
@@ -302,7 +301,7 @@
     .el-aside {
         background-color: #3A4040;
         color: #333;
-        width: 170px;
+        width: 130px;
     }
 
     .el-main {
@@ -317,7 +316,7 @@
         margin-left: 20px;
         margin-top: 15px;
         font-size: 18px;
-        width:1200px;
+        width:1340px;
         border-bottom: 1px  solid #bebebe;
         padding-bottom: 20px;
 
@@ -326,6 +325,7 @@
         font-size: 15px;
         margin-top: 10px;
     }
+
     .top{
         padding-top: 20px;
         padding-left: 45px;
@@ -342,7 +342,7 @@
         padding: 8px 14px;
     }
     .el-header .el-menu {
-        padding-left: 200px;
+        padding-left: 180px;
 
     }
 
@@ -363,6 +363,7 @@
     }
 
     .main_cent {
+        width: 98%;
         background: #bebebe;
         position: relative;
         top: 10px;
@@ -370,8 +371,8 @@
 
 
     }
-    .box{
-        height: 735px;
-    }
+  .box{
+      height: 735px;
+  }
 </style>
 </html>
